@@ -2,7 +2,14 @@
 
 This is a **collaborative repo**. Please see [here](#contact--contribution) for info on contributors & contributing.
 
-## Latest Results / 2014-05-03
+## Latest Results / 2014-11-06
+
+### Ubuntu 14.04 + 2x Xeon X5650
+
+* Dual Xeon X5650
+* Clojure 1.7.0-alpha2 on Oracle JDK7
+
+![](results/20141106-13-28.png	)
 
 ### Fedora 19 + i7-3520M
 
@@ -25,13 +32,10 @@ This is a **collaborative repo**. Please see [here](#contact--contribution) for 
   * **Clojure Google Group discussion**: http://goo.gl/xe46R.
   * **Detailed benchmark results** available in `/results/`.
   * Response length: 1163 bytes (`servers/index.html`).
-  * ApacheBench Version 2.3 Revision: 1430300.
-  * ApacheBench `ab -n 300000 -c <16,64,92,128> -rk`.
-  * Leiningen `trampoline`, `:jvm-opts ["-server" "-XX:+UseConcMarkSweepGC"]`.
+  * wrk - `wrk -t 16 -c <32, 64, 128, 256, 512, 1024> -d 60s`.
+  * Leiningen `trampoline`, `:jvm-opts ["-server"]`.
   * See `scripts/tune_linux.sh` , `scripts/tune_macosx.sh`  for details about OS tuning. Please run the related tune_xxx.sh before starting servers or ab.
   * See `scripts/bench.sh` for full details.
-  * See `servers/nginx-php/conf/nginx.conf` for nginx php config.
-
 
 ## Servers
 
@@ -40,7 +44,7 @@ This is a **collaborative repo**. Please see [here](#contact--contribution) for 
   * [Aleph](https://github.com/ztellman/aleph) - Clojure framework for asynchronous communication, built on top of Netty and Manifold.
   * Jetty 7/8/9, Tomcat 7/8 servlets via [lein-servlet](https://github.com/kumarshantanu/lein-servlet).
   * [nginx 1.4.4](http://nginx.org) + [php5-fpm 5.5.3+dfsg-1ubuntu2.1](http://php-fpm.org/)
-  * [nginx-clojure 0.1.0](https://github.com/xfeep/nginx-clojure) compiled into [nginx 1.4.4](http://nginx.org)  .
+  * [nginx-clojure 0.2.6](https://github.com/xfeep/nginx-clojure) compiled into [nginx 1.4.4](http://nginx.org)  .
   * [Immutant 1.1.1](http://immutant.org/)
   * [Immutant 2 "thedeuce"](https://github.com/immutant/immutant)
   * [Undertow Ring adapter 0.1.2](https://github.com/piranha/ring-undertow-adapter)
